Integrate: proto panel

--- a/proto.tex
+++ b/proto.tex
@@ -1,21 +1,102 @@
-% Section 7 in file proto.tex
-\tbw
-
-% Section 7.1
 \subsection{Point-To-Point Transmission}
 
-% Section 7.2
 \subsection{Rogers Board Etching Prototyping}
 
-% Section 7.3
 \subsection{WHCS Proto-Panel}
+Presentation plays a huge part on how the public feels about a product. This is
+why it is so important that the display of the project is well put together.
+Not only is it important to have a nice display for the purpose of it being a
+proper representation of our design, but also so that it is aesthetically
+appealing. If WHCS were to be launched into industry, marketing would play a
+huge part in it{}'s success. People{}'s first impressions are always driven by
+what they see. If what they see causes them to believe that the product is of
+high quality, they are less likely to be highly skeptical of how the product
+performs. In this section we will be into details about what plans will be made
+in order to showcase the functions of WHCS. This section will not go into the
+practical side of how the display is coming together; rather it will lay the framework for what goals we want to
+accomplish with the display.
 
-% Section 7.3.1
+Our design is not a plug and play design, therefore we won{}'t
+be able to simply plug in the system. We{}'ll have to actually find some way to
+duplicate what the installation of a house would look like. In a home what
+we{}'d be provided with is interior wiring. When we are actually presenting our
+idea what we{}'ll be presented with is an outlet that we can use to draw power
+from. Therefore the first step we{}'d need to take is to convert this outlet
+back into wiring. We could do this by simply using a basic cord. This cord will
+provide us with a hot and a neutral wire and a path to ground. These wires will
+then be used to power the control modules and the base station. We need to
+somehow splice this wire into multiple wires.
+
+We want to make the display as accurate of a representation of
+what would be found in a home as possible. Therefore we will try to follow as
+many codes and standards for home construction as possible. Since we ourselves
+do not have a homeowners electrical permit we are not equipped to actually
+install the system in a real home. Yet for demonstrative purposes we{}'ll do
+fine to follow codes and present them in our display. In \autoref{sec:proto-panel}
+we{}'ll go into further detail of what was done to follow these codes and
+standards.
+
+Our display will consist of the frame, the wiring, and drywall.
+Each made to follow standards. Now our design will consist of 5 different
+wirings; four control modules and one base station.
+
 \subsubsection{Materials}
+The first thing we need is a plug. It is important that we use a three prong
+plug because wiring in the home uses three wires. In addition to the wiring the
+interior walls of homes consist of drywall, insulation, and a wooden frame. The
+wooden frame of homes is made out of 2 by 4 wood. These pieces of 2 by 4 wood
+are usually put together with either screws or nails. Drywall will also be
+needed to provide the presentation side of our wall. For drywall all we{}'ll
+need is enough drywall to cover the entire wall along with some drywall screws
+in order to attach the drywall. Insulation will be unnecessary since we
+aren{}'t worried about temperature or sound insulation for our project. Also
+insulation in a regular home won{}'t interfere with the installation of our
+project so really the insulation is irrelevant.
 
-% Section 7.3.2
-\subsubsection{Dimensions}
+In addition to these basic materials made to construct the walls
+we{}'ll need a few other things. First we{}'ll need the actual control module
+and base station boards. these boards along with the power board will be housed
+in a case that will be attached to the wooden framework. For the light control
+module we will need a wall mounted lamp with a three wire connection. For the
+outlet we will obviously need to buy an outlet. For the outlet and light
+control modules the relays will be placed along the hot wires in order to
+switch them on and back off. To display the outlet control module we will need
+to have something plugged into our display board outlet (for example a fan or a
+coffee maker). The other three modules will need the LCD screen, the door knob,
+the strike, the temperature sensor.
 
-% Section 7.3.3
-\subsubsection{Sketch}
 
+\subsubsection{Dimensions} The dimension of our project is pretty arbitrary,
+that is as long as it is large enough to fix each control module along with the
+base station. The first thing that really had to be decided was whether or not
+we wanted to use a full size door for our design. Although the idea was
+tempting, because it would really give the user the feel of a home experience,
+we decided against it mostly because of weight. If the fame had to be of that
+size all the wood used in the frame along with the weight of an actual door
+would make the project very difficult to move around. Also we{}'d have to
+consider sheer bulkiness of it. Getting an entire door (actually even larger
+than an entire door because of the other attached components) through a door
+can be quite a struggle, add weight to the mess and you{}'re asking for
+difficulties.
+
+The door we will be using will be a homemade door. Fortunately
+because we are also designing the frame that will be used for the wall, we can
+simply make the gap in between the studs the same size as the door we wish to
+make. We decided that 18 inches by 18 inches is a suitable size to make the
+door. After deciding this we figured that 2 feet by 2 feet would be a more than
+large enough area of space to display each module. The total square footage of
+the five control modules would be 20 square feet. We decided that a 4 by 5
+display wall would showcase our design quite nicely.
+
+\subsubsection{Sketch} In the 4 by 5 display we have to decide where everything
+will go. The most important interactive parts of our design are the access
+control module and the base station. We must make sure that these two modules
+are at an acceptable height where they can be interacted with. We decided to
+place three of the modules on the bottom portion and two modules on the top
+portion. The two on top at a more accessible height therefore the door access
+and the base station will be placed here. The light outlet and temperature
+sensor will be placed on the bottom half. To make things look symmetrical the
+lamp will be placed in the middle while the outlet and the temperature sensor
+will be placed on the side. The display will look something like \autoref{fig:proto-sketch}.
+
+\ucfgfx[width=15.24cm,height=9.878cm]{fig:proto-sketch}{a83expected2pagesprotopanel-img001.png}{General design of WHCS display board}
