--- a/mfg.tex
+++ b/mfg.tex
@@ -41,4 +41,5 @@ Therefore in our design we will be using surface mounted technology.
 
 % Section 8.3.3
 \subsubsection{Proto-Panel}
+\label{sec:proto-panel}
 
